fix card gap

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   padding: 32px;
   width: 365px;
-  gap: 32px;
+  gap: 16px;
   border-radius: 16px;
   box-shadow: 16px 32px 56px 0px rgba(143, 174, 207, 0.25);
   background: colors.$pureWhite;
@@ -14,7 +14,6 @@
   @include respond(xl) {
     width: 335.5px;
     margin-bottom: 17px;
-    gap: 16px;
   }
 
   @include respond(md) {
